##########################################################################

cmake_minimum_required (VERSION 2.8)

##########################################################################

add_subdirectory(plot-demo-2d-3d)

##########################################################################

