##########################################################################

cmake_minimum_required (VERSION 2.8)

##########################################################################

set(TARGET example-01)

##########################################################################

add_executable(
  ${TARGET} 
  main.cpp
)

target_link_libraries(
  ${TARGET} 
  plot
)

##########################################################################

